<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ui.edit.ComicMemoActivity">
    <item
        android:id="@+id/menu_search_view"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        android:visible="true"
        android:title="@string/search_bar_title" />
    <item
        android:id="@+id/edit_mode"
        android:title="@string/edit_mode_text" />
    <group android:id="@+id/sort_group" >
        <item android:id="@+id/sort_operation" android:title="@string/sort_operation_text"
            app:showAsAction="never">
            <menu>
                <item
                    android:id="@+id/sort_default"
                    android:title="@string/sort_default_text" />
                <item
                    android:id="@+id/sort_title"
                    android:title="@string/sort_title_text" />
                <item
                    android:id="@+id/sort_author"
                    android:title="@string/sort_author_text" />
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/search_book"
        android:title="@string/search_book" />
</menu>
